--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,16 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://122.51.36.141:3306/template
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+mapper.mappers=com.company.project.core.Mapper
+mapper.not-empty=false
+mapper.identity=mysql
+
+######################JWT配置##############################
+lsq.jwt.secret=leyou@Login(Auth}*^31)&heiMa% 
+lsq.jwt.pubKeyPath=C:\\tmp\\rsa\\rsa.pub 
+lsq.jwt.priKeyPath=C:\\tmp\\rsa\\rsa.pri 
+lsq.jwt.expire=30
